--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Home
 <div class="pagination">
   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}">Newer</a>
+      <a class="pagination-item newer" href="/">Newer</a>
     {% else %}
       <a class="pagination-item newer" href="{{paginator.previous_page_path}}">Newer</a>
     {% endif %}
